kube/app/arr/radarr/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
  - name: http
    port: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: radarr
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - radarr.matthew-stratton.me
    secretName: radarr-tls
  rules:
  - host: radarr.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 7878
        path: /
        pathType: Prefix
